--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -10,6 +10,10 @@
 
 <p>hello-people</p>
 
+<a href="/first/hello?name=John&surname=Conor">Hello John</a>
+
+<p th:text="${message}">Hello</p>
+
 </body>
 
 </html>
