--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -7,6 +7,8 @@
 <body>
     <p th:text="${person.getName()}">Value</p>
     <p th:text="${person.getId()}">Value</p>
+    <p th:text="${person.getAge()}">Value</p>
+    <p th:text="${person.getEmail()}">Value</p>
 
 <a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
 
